--- a/redis-caffeine-cache-starter/pom.xml
+++ b/redis-caffeine-cache-starter/pom.xml
@@ -3,10 +3,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.7.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <groupId>com.lianjia.ctt</groupId>
+        <artifactId>spring-boot-optimus-prime</artifactId>
+        <version>1.5.6.6</version>
     </parent>
 
     <groupId>com.ke.cache</groupId>
