--- a/redis-caffeine-cache-starter/pom.xml
+++ b/redis-caffeine-cache-starter/pom.xml
@@ -3,23 +3,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.ke.ctt</groupId>
-        <artifactId>spring-boot-optimus-prime</artifactId>
-        <version>2.1.9.9</version>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.1.9.RELEASE</version>
         <relativePath/>
     </parent>
 
-    <groupId>com.ke.cache</groupId>
+    <groupId>com.axin.idea</groupId>
     <artifactId>redis-caffeine-cache-starter</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
+
     <name>redis-caffeine-cache-starter</name>
     <description>分布式二级缓存装载组件</description>
 
     <properties>
-
         <!-- 第三方依赖 -->
         <caffeine.version>2.8.0</caffeine.version>
-        <fastjson.version>1.2.60</fastjson.version>
+        <fastjson.version>1.2.70</fastjson.version>
 
         <!-- 数据库相关 -->
         <jedis.version>2.9.0</jedis.version>
