--- a/redis-caffeine-cache-starter/pom.xml
+++ b/redis-caffeine-cache-starter/pom.xml
@@ -20,6 +20,7 @@
         <!-- 第三方依赖 -->
         <caffeine.version>2.8.0</caffeine.version>
         <fastjson.version>1.2.70</fastjson.version>
+        <lombok.version>1.16.20</lombok.version>
     </properties>
 
     <dependencies>
@@ -33,6 +34,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
 
         <dependency>
